--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-  <img class="logo" src="../images/7205.png" alt="" srcset="" width="70px">
 
+  <img class="logo" src="../images/logo.png" alt="" srcset="" width="70px">
   <div id="upper">
     <button onclick="document.location='login.html'">login</button>
     <button onclick="document.location='about.html'">about us</button>
