--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </h1>
     <nav>
       <ul>
-        <li> <a href="index.html">Home</a></li>
-        <li> <a href="about.html">About Us</a> </li>
+        <li> <a href="./index.html">Home</a></li>
+        <li> <a href="./html/about.html">About Us</a> </li>
       </ul>
     </nav>
   </header>
